fixup quote card source alignment due to adding max-width

--- a/src/scss/components/cards/_basic-card.scss
+++ b/src/scss/components/cards/_basic-card.scss
@@ -23,7 +23,7 @@
   }
 
   &__superhead {
-    @include margin(-0.4rem null 1.2rem);
+    @include margin(-0.4rem null 1.6rem);
   }
 
   &__headline {
